# Delphi

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  DELPHI_INTERFACE_PLAN.md  Dockerfile  README.md  config.py  delphi_mission_control.html  docker-compose.yml  main.py  pyproject.toml
api/: chat.py  deps.py
auth/: bearer.py
benchmarks/: __init__.py  __main__.py  aliases.toml  cache.py  cli.py  map.py  models.py  normalize.py  rank.py
benchmarks/sources/: __init__.py  aider.py  base.py  livebench.py  ollama_registry.py
deploy/: Caddyfile  Dockerfile.caddy
docs/sessions/: 2026-05-25_tailscale-connectivity.md
memory/: entities.py  persist.py  record.py  templates.py  vault.py  vault_reader.py
proxy/: ollama_client.py
routing/: classifier.py  resolver.py  roster.py  soul.py  vault_agent.py
telemetry/: logger.py  metrics.py
tests/: conftest.py  test_auth.py  test_chat.py  test_classifier.py  test_e2e.py  test_endpoints.py  test_entities.py  test_logger.py  test_metrics.py  test_ollama_client.py  test_record.py  test_resolver.py  test_roster.py  test_smoke_ollama.py  test_templates.py  test_vault.py  test_vault_agent.py  test_vault_query_route.py  test_vault_reader.py
tests/benchmarks/: test_aider.py  test_cache.py  test_livebench.py  test_map.py  test_normalize.py  test_ollama_registry.py  test_rank.py
ui/: .env.example  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
ui/.claude/: launch.json
ui/src/: App.jsx  index.css
worker/: __init__.py  main.py  queue.py  serde.py
(+24 files in other folders)
