[project]
name = "delphi"
version = "0.1.0"
description = "Tali's private, self-hosted LLM gateway — OpenAI-compatible router for local models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "jinja2>=3.1",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "python-ulid>=3.1.0",
    "prometheus-client>=0.25.0",
    # Used by ``benchmarks/`` to parse Aider's YAML leaderboard. Tiny dep,
    # belongs here so the CLI works on the deployed VM, not just dev.
    "pyyaml>=6.0.3",
    "arq>=0.26",
]

[project.scripts]
delphi-benchmarks = "benchmarks.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # asserts allowed in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["routing", "memory", "config.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["routing", "proxy", "memory", "telemetry", "auth", "benchmarks", "worker", "api"]
